--- a/about.html
+++ b/about.html
@@ -720,14 +720,15 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-md-6">
-                    <div class="single-our-story-item">
+                    <div onclick=" window.location = 'blog-details.html' " style="cursor: pointer;"
+                        class="single-our-story-item">
                         <!-- single our story item -->
                         <div class="thumb">
                             <img src="pic/blog (4).jpg" alt="our story">
                         </div>
                         <div class="conent">
                             <span class="time">1398 اردیبهشت</span>
-                            <a href="blog.html">
+                            <a href="blog-details.html">
                                 <h4 class="title">طول مدت باتری ماشین</h4>
                             </a>
                             <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک
@@ -737,14 +738,15 @@
                     </div><!-- //.single our story item -->
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <div class="single-our-story-item">
+                    <div onclick=" window.location = 'blog-details.html' " style="cursor: pointer;"
+                        class="single-our-story-item">
                         <!-- single our story item -->
                         <div class="thumb">
                             <img src="pic/blog (2).jpg" alt="our story">
                         </div>
                         <div class="conent">
                             <span class="time">1398 اردیبهشت</span>
-                            <a href="blog.html">
+                            <a href="blog-details.html">
                                 <h4 class="title">خرابی باتری ماشین</h4>
                             </a>
                             <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک
@@ -754,14 +756,15 @@
                     </div><!-- //.single our story item -->
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <div class="single-our-story-item">
+                    <div onclick=" window.location = 'blog-details.html' " style="cursor: pointer;"
+                        class="single-our-story-item">
                         <!-- single our story item -->
                         <div class="thumb">
                             <img src="pic/blog (3).jpg" alt="our story">
                         </div>
                         <div class="conent">
                             <span class="time">1398 اردیبهشت</span>
-                            <a href="blog.html">
+                            <a href="blog-details.html">
                                 <h4 class="title">کیفیت باتری ماشین</h4>
                             </a>
                             <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک
