--- a/blog.html
+++ b/blog.html
@@ -422,7 +422,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 col-md-6">
-                    <div class="single-our-story-item">
+                    <div onclick=" window.location = 'blog-details.html' " style="cursor: pointer;"
+                        class="single-our-story-item">
                         <!-- single our story item -->
                         <div class="thumb">
                             <img src="pic/blog (1).jpg" alt="our story">
@@ -439,7 +440,8 @@
                     </div><!-- //.single our story item -->
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <div class="single-our-story-item">
+                    <div onclick=" window.location = 'blog-details.html' " style="cursor: pointer;"
+                        class="single-our-story-item">
                         <!-- single our story item -->
                         <div class="thumb">
                             <img src="pic/blog (2).jpg" alt="our story">
@@ -456,7 +458,8 @@
                     </div><!-- //.single our story item -->
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <div class="single-our-story-item">
+                    <div onclick=" window.location = 'blog-details.html' " style="cursor: pointer;"
+                        class="single-our-story-item">
                         <!-- single our story item -->
                         <div class="thumb">
                             <img src="pic/blog (3).jpg" alt="our story">
@@ -473,7 +476,8 @@
                     </div><!-- //.single our story item -->
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <div class="single-our-story-item">
+                    <div onclick=" window.location = 'blog-details.html' " style="cursor: pointer;"
+                        class="single-our-story-item">
                         <!-- single our story item -->
                         <div class="thumb">
                             <img src="pic/blog (4).jpg" alt="our story">
@@ -490,7 +494,8 @@
                     </div><!-- //.single our story item -->
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <div class="single-our-story-item">
+                    <div onclick=" window.location = 'blog-details.html' " style="cursor: pointer;"
+                        class="single-our-story-item">
                         <!-- single our story item -->
                         <div class="thumb">
                             <img src="pic/newblog (1).jpg" our story">
@@ -507,7 +512,8 @@
                     </div><!-- //.single our story item -->
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <div class="single-our-story-item">
+                    <div onclick=" window.location = 'blog-details.html' " style="cursor: pointer;"
+                        class="single-our-story-item">
                         <!-- single our story item -->
                         <div class="thumb">
                             <img src="pic/newblog (5).jpg" our story">
@@ -524,7 +530,8 @@
                     </div><!-- //.single our story item -->
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <div class="single-our-story-item">
+                    <div onclick=" window.location = 'blog-details.html' " style="cursor: pointer;"
+                        class="single-our-story-item">
                         <!-- single our story item -->
                         <div class="thumb">
                             <img src="pic/newblog (6).jpg" our story">
@@ -541,7 +548,8 @@
                     </div><!-- //.single our story item -->
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <div class="single-our-story-item">
+                    <div onclick=" window.location = 'blog-details.html' " style="cursor: pointer;"
+                        class="single-our-story-item">
                         <!-- single our story item -->
                         <div class="thumb">
                             <img src="pic/newblog (7).jpg" our story">
@@ -558,7 +566,8 @@
                     </div><!-- //.single our story item -->
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <div class="single-our-story-item">
+                    <div onclick=" window.location = 'blog-details.html' " style="cursor: pointer;"
+                        class="single-our-story-item">
                         <!-- single our story item -->
                         <div class="thumb">
                             <img src="pic/newblog (8).jpg" our story">
@@ -575,7 +584,8 @@
                     </div><!-- //.single our story item -->
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <div class="single-our-story-item">
+                    <div onclick=" window.location = 'blog-details.html' " style="cursor: pointer;"
+                        class="single-our-story-item">
                         <!-- single our story item -->
                         <div class="thumb">
                             <img src="pic/newblog (1).jpg" our story">
@@ -592,7 +602,8 @@
                     </div><!-- //.single our story item -->
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <div class="single-our-story-item">
+                    <div onclick=" window.location = 'blog-details.html' " style="cursor: pointer;"
+                        class="single-our-story-item">
                         <!-- single our story item -->
                         <div class="thumb">
                             <img src="pic/blog (1).jpg" our story">
@@ -609,7 +620,8 @@
                     </div><!-- //.single our story item -->
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <div class="single-our-story-item">
+                    <div onclick=" window.location = 'blog-details.html' " style="cursor: pointer;"
+                        class="single-our-story-item">
                         <!-- single our story item -->
                         <div class="thumb">
                             <img src="pic/blog (3).jpg" our story">
