--- a/category.html
+++ b/category.html
@@ -412,47 +412,7 @@
                 <!-- cart product -->
                 <h4 class="title">سبد خرید</h4>
 
-                <div class="single-product-item" style="display: none;" id="shopProducts1">
-                    <!-- single product item -->
-                    <div class="thumb">
-                        <img src="pic/b1.jpg" width="80px" height="80px" alt="recent review">
-                    </div>
-                    <div class="content">
-                        <h4 class="title">باتری ماشین</h4>
-                        <div class="price"><span class="pprice text-white">350.00 تومان</span> <del class="dprice"
-                                style="color: #c25f5f;">500.00
-                                تومان</del></div>
-                        <a href="#" class="remove-cart" onclick=" deleteINShop() ">حذف</a>
-                    </div>
-                </div><!-- //. single product item -->
-
-                <div class="single-product-item" style="display: none;" id="shopProducts2">
-                    <!-- single product item -->
-                    <div class="thumb">
-                        <img src="pic/b2.jpg" width="80px" height="80px" alt="recent review">
-                    </div>
-                    <div class="content">
-                        <h4 class="title">باتری ماشین</h4>
-                        <div class="price"><span class="pprice text-white">350.00 تومان</span> <del class="dprice"
-                                style="color: #c25f5f;">500.00
-                                تومان</del></div>
-                        <a href="#" class="remove-cart" onclick=" deleteINShop() ">حذف</a>
-                    </div>
-                </div><!-- //. single product item -->
-
-                <div class="single-product-item" style="display: none;" id="shopProducts3">
-                    <!-- single product item -->
-                    <div class="thumb">
-                        <img src="pic/b3.jpg" width="80px" height="80px" alt="recent review">
-                    </div>
-                    <div class="content">
-                        <h4 class="title">باتری ماشین</h4>
-                        <div class="price"><span class="pprice text-white">350.00 تومان</span> <del class="dprice"
-                                style="color: #c25f5f;">500.00
-                                تومان</del></div>
-                        <a href="#" class="remove-cart" onclick=" deleteINShop() ">حذف</a>
-                    </div>
-                </div><!-- //. single product item -->
+                <h4 class="text-white">چیزی وجود ندارد</h4>
 
                 <div class="btn-wrapper">
                     <a href="cart.html" class="boxed-btn">بررسی و پرداخت</a>
@@ -602,13 +562,13 @@
                             <!-- top content -->
                             <div class="row">
                                 <div class="col-lg-4 col-md-6">
-                                    <div class="single-new-collection-item">
+                                    <div onclick=" window.location = 'product-details.html' " style="cursor: pointer;"
+                                        class="single-new-collection-item">
                                         <!-- single new collections -->
                                         <div class="thumb">
                                             <img src="pic/b23.jpg" alt="new collcetion image">
                                             <div class="hover">
-                                                <a onclick=" buyingInShop() " href="#" class="addtocart">افزودن به
-                                                    سبد</a>
+                                                <a href="#" class="addtocart">دیدن محصول</a>
                                             </div>
                                         </div>
                                         <div class="content">
@@ -621,13 +581,13 @@
                                     </div><!-- //. single new collections  -->
                                 </div>
                                 <div class="col-lg-4 col-md-6">
-                                    <div class="single-new-collection-item">
+                                    <div onclick=" window.location = 'product-details.html' " style="cursor: pointer;"
+                                        class="single-new-collection-item">
                                         <!-- single new collections -->
                                         <div class="thumb">
                                             <img src="pic/b22.jpg" alt="new collcetion image">
                                             <div class="hover">
-                                                <a onclick=" buyingInShop() " href="#" class="addtocart">افزودن به
-                                                    سبد</a>
+                                                <a href="#" class="addtocart">دیدن محصول</a>
                                             </div>
                                         </div>
                                         <div class="content">
@@ -640,13 +600,13 @@
                                     </div><!-- //. single new collections  -->
                                 </div>
                                 <div class="col-lg-4 col-md-6">
-                                    <div class="single-new-collection-item">
+                                    <div onclick=" window.location = 'product-details.html' " style="cursor: pointer;"
+                                        class="single-new-collection-item">
                                         <!-- single new collections -->
                                         <div class="thumb">
                                             <img src="pic/b3.jpg" alt="new collcetion image">
                                             <div class="hover">
-                                                <a onclick=" buyingInShop() " href="#" class="addtocart">افزودن به
-                                                    سبد</a>
+                                                <a href="#" class="addtocart">دیدن محصول</a>
                                             </div>
                                         </div>
                                         <div class="content">
@@ -659,13 +619,13 @@
                                     </div><!-- //. single new collections  -->
                                 </div>
                                 <div class="col-lg-4 col-md-6">
-                                    <div class="single-new-collection-item">
+                                    <div onclick=" window.location = 'product-details.html' " style="cursor: pointer;"
+                                        class="single-new-collection-item">
                                         <!-- single new collections -->
                                         <div class="thumb">
                                             <img src="pic/b4.jpg" alt="new collcetion image">
                                             <div class="hover">
-                                                <a onclick=" buyingInShop() " href="#" class="addtocart">افزودن به
-                                                    سبد</a>
+                                                <a href="#" class="addtocart">دیدن محصول</a>
                                             </div>
                                         </div>
                                         <div class="content">
@@ -678,13 +638,13 @@
                                     </div><!-- //. single new collections  -->
                                 </div>
                                 <div class="col-lg-4 col-md-6">
-                                    <div class="single-new-collection-item">
+                                    <div onclick=" window.location = 'product-details.html' " style="cursor: pointer;"
+                                        class="single-new-collection-item">
                                         <!-- single new collections -->
                                         <div class="thumb">
                                             <img src="pic/b5.jpg" alt="new collcetion image">
                                             <div class="hover">
-                                                <a onclick=" buyingInShop() " href="#" class="addtocart">افزودن به
-                                                    سبد</a>
+                                                <a href="#" class="addtocart">دیدن محصول</a>
                                             </div>
                                         </div>
                                         <div class="content">
@@ -697,13 +657,13 @@
                                     </div><!-- //. single new collections  -->
                                 </div>
                                 <div class="col-lg-4 col-md-6">
-                                    <div class="single-new-collection-item">
+                                    <div onclick=" window.location = 'product-details.html' " style="cursor: pointer;"
+                                        class="single-new-collection-item">
                                         <!-- single new collections -->
                                         <div class="thumb">
                                             <img src="pic/b6.jpg" alt="new collcetion image">
                                             <div class="hover">
-                                                <a onclick=" buyingInShop() " href="#" class="addtocart">افزودن به
-                                                    سبد</a>
+                                                <a href="#" class="addtocart">دیدن محصول</a>
                                             </div>
                                         </div>
                                         <div class="content">
@@ -716,13 +676,13 @@
                                     </div><!-- //. single new collections  -->
                                 </div>
                                 <div class="col-lg-4 col-md-6">
-                                    <div class="single-new-collection-item">
+                                    <div onclick=" window.location = 'product-details.html' " style="cursor: pointer;"
+                                        class="single-new-collection-item">
                                         <!-- single new collections -->
                                         <div class="thumb">
                                             <img src="pic/b7.jpg" alt="new collcetion image">
                                             <div class="hover">
-                                                <a onclick=" buyingInShop() " href="#" class="addtocart">افزودن به
-                                                    سبد</a>
+                                                <a href="#" class="addtocart">دیدن محصول</a>
                                             </div>
                                         </div>
                                         <div class="content">
@@ -735,13 +695,13 @@
                                     </div><!-- //. single new collections  -->
                                 </div>
                                 <div class="col-lg-4 col-md-6">
-                                    <div class="single-new-collection-item">
+                                    <div onclick=" window.location = 'product-details.html' " style="cursor: pointer;"
+                                        class="single-new-collection-item">
                                         <!-- single new collections -->
                                         <div class="thumb">
                                             <img src="pic/b8.jpg" alt="new collcetion image">
                                             <div class="hover">
-                                                <a onclick=" buyingInShop() " href="#" class="addtocart">افزودن به
-                                                    سبد</a>
+                                                <a href="#" class="addtocart">دیدن محصول</a>
                                             </div>
                                         </div>
                                         <div class="content">
@@ -754,13 +714,13 @@
                                     </div><!-- //. single new collections  -->
                                 </div>
                                 <div class="col-lg-4 col-md-6">
-                                    <div class="single-new-collection-item">
+                                    <div onclick=" window.location = 'product-details.html' " style="cursor: pointer;"
+                                        class="single-new-collection-item">
                                         <!-- single new collections -->
                                         <div class="thumb">
                                             <img src="pic/b9.jpg" alt="new collcetion image">
                                             <div class="hover">
-                                                <a onclick=" buyingInShop() " href="#" class="addtocart">افزودن به
-                                                    سبد</a>
+                                                <a href="#" class="addtocart">دیدن محصول</a>
                                             </div>
                                         </div>
                                         <div class="content">
@@ -795,14 +755,15 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-md-6">
-                    <div class="single-our-story-item">
+                    <div onclick=" window.location = 'blog-details.html' " style="cursor: pointer;"
+                        class="single-our-story-item">
                         <!-- single our story item -->
                         <div class="thumb">
                             <img src="pic/blog (4).jpg" alt="our story">
                         </div>
                         <div class="conent">
                             <span class="time">1398 اردیبهشت</span>
-                            <a href="blog.html">
+                            <a href="blog-details.html">
                                 <h4 class="title">طول مدت باتری ماشین</h4>
                             </a>
                             <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک
@@ -812,14 +773,15 @@
                     </div><!-- //.single our story item -->
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <div class="single-our-story-item">
+                    <div onclick=" window.location = 'blog-details.html' " style="cursor: pointer;"
+                        class="single-our-story-item">
                         <!-- single our story item -->
                         <div class="thumb">
                             <img src="pic/blog (2).jpg" alt="our story">
                         </div>
                         <div class="conent">
                             <span class="time">1398 اردیبهشت</span>
-                            <a href="blog.html">
+                            <a href="blog-details.html">
                                 <h4 class="title">خرابی باتری ماشین</h4>
                             </a>
                             <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک
@@ -829,14 +791,15 @@
                     </div><!-- //.single our story item -->
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <div class="single-our-story-item">
+                    <div onclick=" window.location = 'blog-details.html' " style="cursor: pointer;"
+                        class="single-our-story-item">
                         <!-- single our story item -->
                         <div class="thumb">
                             <img src="pic/blog (3).jpg" alt="our story">
                         </div>
                         <div class="conent">
                             <span class="time">1398 اردیبهشت</span>
-                            <a href="blog.html">
+                            <a href="blog-details.html">
                                 <h4 class="title">کیفیت باتری ماشین</h4>
                             </a>
                             <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک
