--- a/product-details.html
+++ b/product-details.html
@@ -197,7 +197,7 @@
 
                 <li class="right-menu"> <a class="fas fa-user usericon" href="login.html"></a> </li>
                 <li class="cart" id="cart"><i class="fas fa-shopping-basket"></i>
-                    <span class="badge">0</span>
+                    <span id="ShopBattryNum" class="badge">0</span>
                 </li>
             </ul>
         </div>
@@ -315,7 +315,8 @@
                                     <li><a href="#"><i class="fas fa-share-square"></i></a></li>
                                 </ul>
                                 <div class="btn-wrapper">
-                                    <a href="#" class="boxed-btn">افزودن به سبد</a>
+                                    <a onclick=" buyingInShop() " href="javascript:void(0);" class="boxed-btn">افزودن به
+                                        سبد</a>
                                 </div>
                             </div>
                         </div>
@@ -768,7 +769,47 @@
             <div class="cart-products">
                 <!-- cart product -->
                 <h4 class="title">سبد خرید</h4>
-                <h4 class="text-white">چیزی وجود ندارد</h4>
+                <div class="single-product-item" style="display: none;" id="shopProducts1">
+                    <!-- single product item -->
+                    <div class="thumb">
+                        <img src="pic/b1.jpg" width="80px" height="80px" alt="recent review">
+                    </div>
+                    <div class="content">
+                        <h4 class="title">باتری ماشین</h4>
+                        <div class="price"><span class="pprice text-white">350.00 تومان</span> <del class="dprice"
+                                style="color: #c25f5f;">500.00
+                                تومان</del></div>
+                        <a href="#" class="remove-cart" onclick=" deleteINShop() ">حذف</a>
+                    </div>
+                </div><!-- //. single product item -->
+
+                <div class="single-product-item" style="display: none;" id="shopProducts2">
+                    <!-- single product item -->
+                    <div class="thumb">
+                        <img src="pic/b2.jpg" width="80px" height="80px" alt="recent review">
+                    </div>
+                    <div class="content">
+                        <h4 class="title">باتری ماشین</h4>
+                        <div class="price"><span class="pprice text-white">350.00 تومان</span> <del class="dprice"
+                                style="color: #c25f5f;">500.00
+                                تومان</del></div>
+                        <a href="#" class="remove-cart" onclick=" deleteINShop() ">حذف</a>
+                    </div>
+                </div><!-- //. single product item -->
+
+                <div class="single-product-item" style="display: none;" id="shopProducts3">
+                    <!-- single product item -->
+                    <div class="thumb">
+                        <img src="pic/b3.jpg" width="80px" height="80px" alt="recent review">
+                    </div>
+                    <div class="content">
+                        <h4 class="title">باتری ماشین</h4>
+                        <div class="price"><span class="pprice text-white">350.00 تومان</span> <del class="dprice"
+                                style="color: #c25f5f;">500.00
+                                تومان</del></div>
+                        <a href="#" class="remove-cart" onclick=" deleteINShop() ">حذف</a>
+                    </div>
+                </div><!-- //. single product item -->
                 <div class="btn-wrapper">
                     <a href="cart.html" class="boxed-btn">بررسی و پرداخت</a>
                 </div>
