--- a/blog-details.html
+++ b/blog-details.html
@@ -472,7 +472,8 @@
                             </div>
                             <div class="widget-body">
                                 <!-- widget body -->
-                                <div class="single-latest-post">
+                                <div onclick=" window.location = 'blog-details.html' " style="cursor: pointer;"
+                                    class="single-latest-post">
                                     <!-- single lates post item start-->
                                     <div class="media">
                                         <!-- media  -->
@@ -491,7 +492,8 @@
                                     <!-- /.media -->
                                 </div>
                                 <!-- single lates post item start-->
-                                <div class="single-latest-post">
+                                <div onclick=" window.location = 'blog-details.html' " style="cursor: pointer;"
+                                    class="single-latest-post">
                                     <!-- single lates post item start-->
                                     <div class="media">
                                         <!-- media  -->
@@ -510,7 +512,8 @@
                                     <!-- /.media -->
                                 </div>
                                 <!-- single lates post item start-->
-                                <div class="single-latest-post">
+                                <div onclick=" window.location = 'blog-details.html' " style="cursor: pointer;"
+                                    class="single-latest-post">
                                     <!-- single lates post item start-->
                                     <div class="media">
                                         <!-- media  -->
@@ -529,7 +532,8 @@
                                     <!-- /.media -->
                                 </div>
                                 <!-- single lates post item start-->
-                                <div class="single-latest-post">
+                                <div onclick=" window.location = 'blog-details.html' " style="cursor: pointer;"
+                                    class="single-latest-post">
                                     <!-- single lates post item start-->
                                     <div class="media">
                                         <!-- media  -->
@@ -548,7 +552,8 @@
                                     <!-- /.media -->
                                 </div>
                                 <!-- single lates post item start-->
-                                <div class="single-latest-post">
+                                <div onclick=" window.location = 'blog-details.html' " style="cursor: pointer;"
+                                    class="single-latest-post">
                                     <!-- single lates post item start-->
                                     <div class="media">
                                         <!-- media  -->
@@ -658,7 +663,7 @@
                                         <a href="#"> 220 ولت </a>
                                     </li>
                                     <li>
-                                        <a href="#"> 170 ولت </a>
+                                        <a href="#"> 170 ولت </a>`
                                     </li>
                                 </ul>
                                 <!-- /.tags -->
