--- a/cart.html
+++ b/cart.html
@@ -197,7 +197,7 @@
 
                 <li class="right-menu"> <a class="fas fa-user usericon" href="login.html"></a> </li>
                 <li class="cart" id="cart"><i class="fas fa-shopping-basket"></i>
-                    <span class="badge">0</span>
+                    <span id="Cartnum" class="badge">3</span>
                 </li>
             </ul>
         </div>
@@ -669,7 +669,8 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-md-6">
-                    <div class="single-our-story-item">
+                    <div onclick=" window.location = 'blog-details.html' " style="cursor: pointer;"
+                        class="single-our-story-item">
                         <!-- single our story item -->
                         <div class="thumb">
                             <img src="pic/blog (4).jpg" alt="our story">
@@ -686,7 +687,8 @@
                     </div><!-- //.single our story item -->
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <div class="single-our-story-item">
+                    <div onclick=" window.location = 'blog-details.html' " style="cursor: pointer;"
+                        class="single-our-story-item">
                         <!-- single our story item -->
                         <div class="thumb">
                             <img src="pic/blog (2).jpg" alt="our story">
@@ -703,7 +705,8 @@
                     </div><!-- //.single our story item -->
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <div class="single-our-story-item">
+                    <div onclick=" window.location = 'blog-details.html' " style="cursor: pointer;"
+                        class="single-our-story-item">
                         <!-- single our story item -->
                         <div class="thumb">
                             <img src="pic/blog (3).jpg" alt="our story">
