--- a/product-details.html
+++ b/product-details.html
@@ -197,7 +197,7 @@
 
                 <li class="right-menu"> <a class="fas fa-user usericon" href="login.html"></a> </li>
                 <li class="cart" id="cart"><i class="fas fa-shopping-basket"></i>
-                    <span id="ShopBattryNum" class="badge">0</span>
+                    <span id="ShopNum" class="badge">0</span>
                 </li>
             </ul>
         </div>
@@ -249,17 +249,30 @@
                             <div class="single-product-thumb">
                                 <img src="pic/b16.jpg" alt="product details image">
                             </div>
+                            <div class="single-product-thumb">
+                                <img src="pic/b17.jpg" alt="product details image">
+                            </div>
+                            <div class="single-product-thumb">
+                                <img src="pic/b10.jpg" alt="product details image">
+                            </div>
                         </div>
-                        <ul class="owl-thumbs product-deails-thumb d-flex justify-content-center" data-slider-id="1">
+                        <ul class="owl-thumbs product-deails-thumb d-flex justify-content-center row"
+                            data-slider-id="1">
 
-                            <li class="owl-thumb-item">
+                            <li class="owl-thumb-item col-3 my-1">
                                 <img src="pic/b13.jpg" width="150px" height="150px" alt="product details thumb">
                             </li>
-                            <li class="owl-thumb-item">
+                            <li class="owl-thumb-item col-3 my-1">
                                 <img src="pic/b14.jpg" width="150px" height="150px" alt="product details thumb">
                             </li>
-                            <li class="owl-thumb-item">
+                            <li class="owl-thumb-item col-3 my-1">
                                 <img src="pic/b16.jpg" width="150px" height="150px" alt="product details thumb">
+                            </li>
+                            <li class="owl-thumb-item col-3 my-1">
+                                <img src="pic/b17.jpg" width="150px" height="150px" alt="product details thumb">
+                            </li>
+                            <li class="owl-thumb-item col-3 my-1">
+                                <img src="pic/b10.jpg" width="150px" height="150px" alt="product details thumb">
                             </li>
                         </ul>
                     </div><!-- //.left content area -->
@@ -516,7 +529,8 @@
                 <div class="col-lg-12">
                     <div class="recently-added-carousel" id="recently-added-carousel">
                         <!-- recently added carousel -->
-                        <div class="single-new-collection-item">
+                        <div onclick=" window.location = 'product-details.html' " style="cursor: pointer;"
+                            class="single-new-collection-item">
                             <div class="thumb">
                                 <img src="pic/b1.jpg" alt="product image">
                                 <div class="hover">
@@ -525,12 +539,13 @@
                             </div>
                             <div class="content">
                                 <h4 class="title">باتری ماشین</h4>
-                                <div class="price mt-3"><span class="sprice">10.00 تومان</span> <del
+                                <div dir="rtl" class="price mt-3"><span class="sprice">10.00 تومان</span> <del
                                         class="dprice">47.00
                                         تومان</del></div>
                             </div>
                         </div>
-                        <div class="single-new-collection-item">
+                        <div onclick=" window.location = 'product-details.html' " style="cursor: pointer;"
+                            class="single-new-collection-item">
                             <div class="thumb">
                                 <img src="pic/b2.jpg" alt="product image">
                                 <div class="hover">
@@ -539,12 +554,13 @@
                             </div>
                             <div class="content">
                                 <h4 class="title">باتری ماشین</h4>
-                                <div class="price mt-3"><span class="sprice">30.00 تومان</span> <del
+                                <div dir="rtl" class="price mt-3"><span class="sprice">30.00 تومان</span> <del
                                         class="dprice">45.00
                                         تومان</del></div>
                             </div>
                         </div>
-                        <div class="single-new-collection-item">
+                        <div onclick=" window.location = 'product-details.html' " style="cursor: pointer;"
+                            class="single-new-collection-item">
                             <div class="thumb">
                                 <img src="pic/b3.jpg" alt="product image">
                                 <div class="hover">
@@ -553,12 +569,13 @@
                             </div>
                             <div class="content">
                                 <h4 class="title">باتری ماشین</h4>
-                                <div class="price mt-3"><span class="sprice">70.00 تومان</span> <del
+                                <div dir="rtl" class="price mt-3"><span class="sprice">70.00 تومان</span> <del
                                         class="dprice">120.00
                                         تومان</del></div>
                             </div>
                         </div>
-                        <div class="single-new-collection-item">
+                        <div onclick=" window.location = 'product-details.html' " style="cursor: pointer;"
+                            class="single-new-collection-item">
                             <div class="thumb">
                                 <img src="pic/b4.jpg" alt="product image">
                                 <div class="hover">
@@ -567,12 +584,13 @@
                             </div>
                             <div class="content">
                                 <h4 class="title">باتری ماشین</h4>
-                                <div class="price mt-3"><span class="sprice">89.00 تومان</span> <del
+                                <div dir="rtl" class="price mt-3"><span class="sprice">89.00 تومان</span> <del
                                         class="dprice">156.00
                                         تومان</del></div>
                             </div>
                         </div>
-                        <div class="single-new-collection-item">
+                        <div onclick=" window.location = 'product-details.html' " style="cursor: pointer;"
+                            class="single-new-collection-item">
                             <div class="thumb">
                                 <img src="pic/b5.jpg" alt="product image">
                                 <div class="hover">
@@ -581,7 +599,7 @@
                             </div>
                             <div class="content">
                                 <h4 class="title">باتری ماشین</h4>
-                                <div class="price mt-3"><span class="sprice">70.00 تومان</span> <del
+                                <div dir="rtl" class="price mt-3"><span class="sprice">70.00 تومان</span> <del
                                         class="dprice">90.00
                                         تومان</del></div>
                             </div>
