--- a/blog.html
+++ b/blog.html
@@ -46,7 +46,7 @@
                         <ul>
                             <li>
                                 <div class="support-search-area">
-                                    <form action="#" class="search-form">
+                                    <form action="" class="search-form">
                                         <div class="form-element has-icon">
                                             <input type="text" class="input-field"
                                                 placeholder="کلمه کلیدی را وارد نمایید">
